# Cpp

./: README.md
CppCLI-Qt/: main.cpp
CppGUI-GTK/: CMakeLists.txt  main.cpp
EntenderTiposDeTamanhoFixo/: EntenderTiposDeTamanhoFixo.cpp
EscritaEmArquivo/: EscritaEmArquivo.cpp
ExThreads/: CMakeLists.txt  main.cpp
InstrucoesEmAssembly/: aaa.s  add.s  args.s  asm.s  cmov.s  cmpxchg.s  cpuid.s  cpuid2.s  cpuid3.s  cpuid4.s  das.s  fcmovtest.s  fcomitest.s  fcomtest.s  fpmath1.s  fpmath2.s  fpuenv.s  fpusave.s  fscaletest.s  imul.s  imultoverfow.s  integers.s  jns.s  logtest.s  main.cpp  me.c  me.s  movl.s  movstest1.s  movtest2.s  mul.s  new.s  nohup.out  out.txt  premtest.s  pushpop.s  reptest.s  reptest3.s  reptest4.s  roundtest.s  (+1 more)
RepresentacaoDeDouble/: RepresentacaoDeDouble.cpp
RepresentacaoDeFloat/: RepresentacaoDeFloat.cpp
UsandoAssemblyECpp/: asm.c  asm32.s  asm64.s  build.sh  info.txt  main.cpp
